--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
+    "wellknown": "^0.5.0",
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
